src/test/ui/where-clauses/where-clauses-unsatisfied.stderr
error[E0277]: the trait bound `Struct: std::cmp::Eq` is not satisfied
  --> $DIR/where-clauses-unsatisfied.rs:6:10
   |
LL | fn equal<T>(a: &T, b: &T) -> bool where T : Eq { a == b }
   | ---------------------------------------------- required by `equal`
...
LL |     drop(equal(&Struct, &Struct))
   |          ^^^^^ the trait `std::cmp::Eq` is not implemented for `Struct`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
